@@ -59,6 +59,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_equal ##### -->
@@ -78,6 +80,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_defined_size ##### -->
@@ -87,6 +91,9 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @size: 
+<!-- # Unused Parameters # -->
+@fa: 
+@fs: 
 
 
 <!-- ##### FUNCTION gda_column_get_name ##### -->
@@ -96,6 +103,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_name ##### -->
@@ -105,6 +114,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @name: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_title ##### -->
@@ -132,6 +143,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_table ##### -->
@@ -141,6 +154,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @table: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_caption ##### -->
@@ -150,6 +165,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_caption ##### -->
@@ -159,6 +176,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @caption: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_scale ##### -->
@@ -168,6 +187,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_scale ##### -->
@@ -177,6 +198,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @scale: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_dbms_type ##### -->
@@ -204,6 +227,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_gda_type ##### -->
@@ -213,6 +238,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @type: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_allow_null ##### -->
@@ -222,6 +249,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_allow_null ##### -->
@@ -231,6 +260,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @allow: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_primary_key ##### -->
@@ -240,6 +271,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_primary_key ##### -->
@@ -249,6 +282,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @pk: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_unique_key ##### -->
@@ -258,6 +293,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_unique_key ##### -->
@@ -267,6 +304,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @uk: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_references ##### -->
@@ -276,6 +315,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_references ##### -->
@@ -285,6 +326,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @ref: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_auto_increment ##### -->
@@ -294,6 +337,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_auto_increment ##### -->
@@ -303,6 +348,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @is_auto: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_position ##### -->
@@ -312,6 +359,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_position ##### -->
@@ -321,6 +370,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @position: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_get_default_value ##### -->
@@ -330,6 +381,8 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @Returns: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
 <!-- ##### FUNCTION gda_column_set_default_value ##### -->
@@ -339,5 +392,7 @@ Management of #GdaDataModel column attributes
 
 @column: 
 @default_value: 
+<!-- # Unused Parameters # -->
+@fa: 
 
 
